--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -5,10 +5,10 @@
 @import "./global/reset";
 // For responsive
 @import "./responsive/breakpoints";
-
+// for component
+@import "./component/index";
 
 // App.js css
 html {
   scroll-behavior: smooth;
 }
-
