--- a/src/styles/component/_imageGallery.scss
+++ b/src/styles/component/_imageGallery.scss
@@ -27,50 +27,88 @@
       min-height: 500px;
 
       .imageBox_container {
-        padding: 1rem;
-        display: grid !important;
-        grid-template-columns: repeat(5, 1fr);
-        grid-gap: 1rem;
-        grid-auto-rows: minmax(auto, 1fr);
+        .imageBoxWithInput {
+          padding: 1rem;
+          display: grid !important;
+          grid-template-columns: repeat(5, 1fr);
+          grid-gap: 1rem;
+          grid-auto-rows: minmax(auto, 1fr);
 
-        @include breakpoints(portraitTablet) {
-          grid-template-columns: repeat(4, 1fr);
-        }
+          @include breakpoints(tablet) {
+            grid-template-columns: repeat(4, 1fr);
+          }
 
-        @include breakpoints(largeMobile) {
-          grid-template-columns: repeat(2, 1fr);
-        }
+          @include breakpoints(portraitTablet) {
+            grid-template-columns: repeat(3, 1fr);
+          }
 
-        .large_image_div {
-          grid-column: span 2 / span 2;
-          grid-row: span 2 / span 2;
-          .large_image {
-            height: 300px;
-            width: 100%;
-            border: 1px solid #ccc;
-            border-radius: 0.375rem;
-            background-color: #f9fafb;
-            transition: filter 0.3s ease;
+          @include breakpoints(largeMobile) {
+            grid-template-columns: repeat(2, 1fr);
+          }
 
-            &:hover {
-              filter: brightness(0.95);
+          .large_image_div {
+            grid-column: span 2 / span 2;
+            grid-row: span 2 / span 2;
+            .large_image {
+              height: 300px;
+              width: 100%;
+              border: 1px solid #ccc;
+              border-radius: 0.375rem;
+              background-color: #f9fafb;
+              transition: filter 0.3s ease;
+
+              &:hover {
+                filter: brightness(0.95);
+                cursor: grab;
+              }
             }
           }
-        }
 
-        .normal_image_div {
-          grid-column: span 1 / span 1;
-          height: 142px;
-          .normal_image {
+          .normal_image_div {
+            grid-column: span 1 / span 1;
             height: 142px;
-            width: 100%;
-            border: 1px solid #ccc;
-            border-radius: 0.375rem;
-            background-color: #f9fafb;
-            transition: filter 0.3s ease;
+            .normal_image {
+              height: 142px;
+              width: 100%;
+              border: 1px solid #ccc;
+              border-radius: 0.375rem;
+              background-color: #f9fafb;
+              transition: filter 0.3s ease;
 
-            &:hover {
-              filter: brightness(0.95);
+              &:hover {
+                filter: brightness(0.95);
+                cursor: grab;
+              }
+            }
+          }
+          .input_box {
+            .input_box_input {
+              display: none;
+            }
+            .input_box_label {
+              display: flex;
+              flex-direction: column;
+              gap: 0.5rem;
+              height: 8.875rem;
+              align-items: center;
+              justify-content: center;
+
+              border: 2px dashed #000;
+              border-radius: 0.375rem;
+              background-color: #f9fafb;
+
+              &:hover {
+                background-color: #dbe4ff;
+                border-color: #568dc0;
+                cursor: pointer;
+              }
+              .label_icon {
+                width: 2rem;
+                height: 2rem;
+              }
+              .label_text {
+                text-align: center;
+              }
             }
           }
         }
