--- a/src/styles/component/_imageGallery.scss
+++ b/src/styles/component/_imageGallery.scss
@@ -49,6 +49,7 @@
           .large_image_div {
             grid-column: span 2 / span 2;
             grid-row: span 2 / span 2;
+            position: relative;
             .large_image {
               height: 19rem !important;
               width: 100%;
@@ -62,11 +63,23 @@
                 cursor: grab;
               }
             }
+            .select_box {
+              position: absolute;
+              top: 1rem;
+              left: 1rem;
+              z-index: 10;
+              width: 2rem;
+              height: 2rem;
+              background-color: #1f7ed7;
+              border: 1px solid #000;
+              border-radius: 0.5rem;
+            }
           }
 
           .normal_image_div {
             grid-column: span 1 / span 1;
             height: 9rem;
+            position: relative;
             .normal_image {
               height: 9rem;
               width: 100%;
@@ -79,6 +92,17 @@
                 filter: brightness(0.95);
                 cursor: grab;
               }
+            }
+            .select_box {
+              position: absolute;
+              top: .5rem;
+              left:.5rem;
+              z-index: 100;
+              width: 1rem;
+              height: 1rem;
+              background-color: #1f7ed7;
+              border: 1px solid #000;
+              border-radius: 0.5rem;
             }
           }
           .input_box {
