--- a/src/styles/component/_header.scss
+++ b/src/styles/component/_header.scss
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   background-color: #cfddec;
-  row-gap: .5rem;
+  row-gap: 0.5rem;
 
   .imageGalleryHeader_left {
     font-weight: 600;
@@ -19,5 +19,28 @@
   .imageGalleryHeader_right {
     font-size: 0.875rem;
     color: #40454b;
+  }
+  .delete_button {
+    padding: 0.3rem 0.5rem;
+    gap: 0.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-radius: 0.375rem;
+    background-color: #ddd;
+    transition: background-color 0.4s ease, color 0.4s ease,
+      border-color 0.6s ease;
+
+    &:hover {
+      background-color: #f6635c;
+      cursor: pointer;
+      color: #fff;
+      border-color: #f6635c;
+    }
+    .delete_icon {
+      width: 1rem;
+      height: 1rem;
+    }
   }
 }
