--- a/src/styles/component/_header.scss
+++ b/src/styles/component/_header.scss
@@ -20,6 +20,9 @@
     font-size: 0.875rem;
     color: #40454b;
   }
+  .select_message{
+    color: #352F44;
+  }
   .delete_button {
     padding: 0.3rem 0.5rem;
     gap: 0.4rem;
@@ -30,7 +33,7 @@
     border-radius: 0.375rem;
     background-color: #ddd;
     transition: background-color 0.4s ease, color 0.4s ease,
-      border-color 0.6s ease;
+      border-color 0.4s ease;
 
     &:hover {
       background-color: #f6635c;
