--- a/src/styles/component/_imageGallery.scss
+++ b/src/styles/component/_imageGallery.scss
@@ -24,8 +24,7 @@
       margin-right: 0.5rem;
       background-color: #ffffff;
       border-radius: 0.375rem;
-      min-height: 500px;
-
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.129);
       .imageBox_container {
         .imageBoxWithInput {
           padding: 1rem;
@@ -95,8 +94,8 @@
             }
             .select_box {
               position: absolute;
-              top: .5rem;
-              left:.5rem;
+              top: 0.5rem;
+              left: 0.5rem;
               z-index: 100;
               width: 1rem;
               height: 1rem;
@@ -125,6 +124,8 @@
                 background-color: #dbe4ff;
                 border-color: #568dc0;
                 cursor: pointer;
+                transition: background-color 0.4s ease, color 0.4s ease,
+                  border-color 0.4s ease;
               }
               .label_icon {
                 width: 2rem;
