--- a/src/styles/component/_header.scss
+++ b/src/styles/component/_header.scss
@@ -2,48 +2,57 @@
   padding: 1rem 1.5rem;
   border-radius: 0.375rem;
   margin-bottom: 0.5rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   background-color: #cfddec;
-  row-gap: 0.5rem;
-
-  .imageGalleryHeader_left {
-    font-weight: 600;
-    display: inline-block;
-    padding-left: 0.15rem;
-    &:hover {
-      cursor: pointer;
-    }
-  }
-  .imageGalleryHeader_right {
-    font-size: 0.875rem;
-    color: #40454b;
-  }
-  .select_message{
-    color: #352F44;
-  }
-  .delete_button {
-    padding: 0.3rem 0.5rem;
-    gap: 0.4rem;
+  min-height: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 0.5rem;
+  .imageGalleryHeader {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    border: 1px solid #ccc;
-    border-radius: 0.375rem;
-    background-color: #ddd;
-    transition: background-color 0.4s ease, color 0.4s ease,
-      border-color 0.4s ease;
+    row-gap: 0.5rem;
+    width: 100%;
 
-    &:hover {
-      background-color: #f6635c;
-      cursor: pointer;
-      color: #fff;
-      border-color: #f6635c;
+    .imageGalleryHeader_left {
+      font-weight: 600;
+      display: inline-block;
+      padding-left: 0.15rem;
+      &:hover {
+        cursor: pointer;
+      }
     }
-    .delete_icon {
-      width: 1rem;
-      height: 1rem;
+    .imageGalleryHeader_right {
+      font-size: 0.875rem;
+      color: #40454b;
+    }
+    .select_message {
+      color: #352f44;
+    }
+    .delete_button {
+      padding: 0.3rem 0.5rem;
+      gap: 0.4rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid #ccc;
+      border-radius: 0.375rem;
+      background-color: #ddd;
+      transition: background-color 0.4s ease, color 0.4s ease,
+        border-color 0.4s ease;
+
+      &:hover {
+        background-color: #f6635c;
+        cursor: pointer;
+        color: #fff;
+        border-color: #f6635c;
+      }
+      .delete_icon {
+        width: 1rem;
+        height: 1rem;
+      }
     }
   }
 }
