--- a/src/styles/component/_imageGallery.scss
+++ b/src/styles/component/_imageGallery.scss
@@ -134,6 +134,16 @@
           }
         }
       }
+
+      .DragOverlay {
+        max-height: 10rem;
+        max-width: 10rem;
+        overflow: hidden;
+        border: 1px solid #ccc;
+        border-radius: 0.375rem;
+        background-color: #f9fafb;
+        transition: filter 0.3s ease;
+      }
     }
   }
 }
