--- a/src/styles/component/_imageGallery.scss
+++ b/src/styles/component/_imageGallery.scss
@@ -46,6 +46,8 @@
             position: relative;
             .large_image {
               height: 19rem !important;
+            }
+            .image {
               width: 100%;
               border: 1px solid #ccc;
               border-radius: 0.375rem;
@@ -76,6 +78,8 @@
             position: relative;
             .normal_image {
               height: 9rem;
+            }
+            .image {
               width: 100%;
               border: 1px solid #ccc;
               border-radius: 0.375rem;
@@ -136,7 +140,6 @@
       }
 
       .DragOverlay {
-        
         max-height: 10rem;
         max-width: 10rem;
         overflow: hidden;
